# Universal-Compressor

./: AnalogLookAndFeel.cpp  AnalogLookAndFeel.h  AppConfig.h  CMakeLists.txt  EnhancedCompressorEditor.cpp  EnhancedCompressorEditor.h  README.md  README_UI_IMPLEMENTATION.md  UniversalCompressor.cpp  UniversalCompressor.h  UniversalCompressorEditor.cpp  UniversalCompressorEditor.h  UniversalCompressorEnhanced.h  antialiasing_improvements.md  build.sh  test_1176.md  test_enhanced_plugin.cpp  test_plugin.cpp  validate_dsp.md
